<resources>
    <string name="app_name">DeliveryClerkMobileApp</string>

    <!-- related to the login activity  -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="login_error_msg">Login Error</string>
    <string name="no_connection_msg">No internet connection</string>
    <string name="missing_information_msg">Please fill all information</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_history">Past Deliveries</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_started_delivering">Start Delivering</string>
    <string name="nav_complete_delivery">Complete Delivery</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Clerk Home</item>
        <item>Deliveries History</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_about_kasha">About Kasha</string>

    <string name="title_activity_history">Delivery</string>
    <string name="title_activity_home">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
